[package]
name = "kaosldr_64"
version = "0.1.0"
edition = "2021"
authors = ["Klaus Aschenbrenner"]

[dependencies]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
lto = false

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[[bin]]
name = "kldr64"
path = "src/main.rs"
test = false
doc = false
