[package]
name = "kaosldr_uefi"
version = "0.1.0"
edition = "2021"
authors = ["Klaus Aschenbrenner"]

# No external dependencies: the minimal subset of the UEFI System Table and the
# Simple Text Output Protocol that this loader needs is declared by hand in src/main.rs.
# This keeps the loader self-contained and in the same "build it yourself" spirit as the
# rest of the KAOS code base (own ATA, own FAT12, own heap, ...).
[dependencies]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
lto = false

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

# The binary is named "bootx64" so that `cargo build` emits `bootx64.efi`, which is copied
# to /EFI/BOOT/BOOTX64.EFI on the EFI System Partition (the path the firmware searches by
# convention).
[[bin]]
name = "bootx64"
path = "src/main.rs"
test = false
doc = false
