[package]
name = "kaos_kernel"
version = "0.1.0"
edition = "2021"
authors = ["Klaus Aschenbrenner"]
autotests = false

[dependencies]

[profile.dev]
panic = "abort"
opt-level = 1
debug = true
lto = false

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[[bin]]
name = "kaos_kernel"
harness = false
