[package]
name = "kaos_kernel"
version = "0.1.0"
edition = "2021"
authors = ["Klaus Aschenbrenner"]

[lib]
# Disable default test target for lib - we use integration tests only
test = false
doctest = false
harness = false

[dependencies]

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
lto = false

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[[bin]]
name = "kaos_kernel"
test = false

# Integration tests - each runs as a separate kernel in QEMU
# Use `cargo test --test basic_boot` to run
[[test]]
name = "basic_boot"

[[test]]
name = "pmm_test"

[[test]]
name = "vmm_test"

[[test]]
name = "heap_test"

[[test]]
name = "spinlock_test"

[[test]]
name = "interrupts_layout_test"

[[test]]
name = "gdt_layout_test"

[[test]]
name = "scheduler_rr_test"

[[test]]
name = "scheduler_not_initialized_test"

[[test]]
name = "screen_test"

[[test]]
name = "keyboard_e2e_test"

[[test]]
name = "keyboard_panic_contract_test"

[[test]]
name = "ata_test"

[[test]]
name = "ata_panic_contract_test"

[[test]]
name = "page_fault_death_test"

[[test]]
name = "user_mode_iretq_smoke_test"

[[test]]
name = "syscall_dispatch_test"
